added some text to the readme

--- a/README
+++ b/README
@@ -1,2 +1,2 @@
 Some way of display and download a song from a spotify http url.
-Not even halfway done yet.
+Not even halfway done yet. Maybe will never be completed...
